tests/neg/classOf.check
-- Error: tests/neg/classOf.scala:6:22 ---------------------------------------------------------------------------------
6 |  def f1[T] = classOf[T] // error
  |                      ^
  |                      T is not a class type
-- Error: tests/neg/classOf.scala:7:32 ---------------------------------------------------------------------------------
7 |  def f2[T <: String] = classOf[T] // error
  |                                ^
  |                                T is not a class type
  |                                
  |                                where:    T is a type in method f2 with bounds <: String
-- Error: tests/neg/classOf.scala:9:18 ---------------------------------------------------------------------------------
9 |  val y = classOf[C { type I = String }] // error
  |                  ^^^^^^^^^^^^^^^^^^^^^
  |                  Test.C{I = String} is not a class type
